# sl-up-py

./: .gitignore  README.md  pyproject.toml  sl-up  sl_ssl_example_output.txt  test
.github/workflows/: python-app.yml
sl_up/: main.py  operations.py  terminal.py
src/: log_parser.py  main.py  operations.py  terminal.py
test/: test_log_parser.py
tests/: test_log_parser.py
